--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@okta/okta-react": "^1.2.0",
+    "create-react-app": "^2.1.8",
+    "express-generator": "^4.16.0",
     "history": "^4.9.0",
     "react": "^16.8.4",
     "react-calendar": "^2.18.1",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
