--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@okta/okta-react": "^1.2.0",
+    "@types/jwt-decode": "^2.2.1",
+    "axios": "^0.18.0",
     "create-react-app": "^2.1.8",
     "express-generator": "^4.16.0",
     "history": "^4.9.0",
+    "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-axios": "^2.0.3",
     "react-calendar": "^2.18.1",
+    "react-datepicker": "^2.3.0",
+    "react-datetime-picker": "^2.3.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "start": "react-scripts start",
