--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-generator": "^4.16.0",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
+    "mdbreact": "^4.11.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-axios": "^2.0.3",
