--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@okta/okta-react": "^1.2.0",
     "@types/jwt-decode": "^2.2.1",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "create-react-app": "^2.1.8",
     "express-generator": "^4.16.0",
     "history": "^4.9.0",
@@ -15,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-axios": "^2.0.3",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-calendar": "^2.18.1",
     "react-datepicker": "^2.3.0",
     "react-datetime-picker": "^2.3.0",
