--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
+    "react-stripe-checkout": "^2.6.3",
     "typescript": "^3.3.4000"
   },
   "scripts": {
