--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "create-react-app": "^2.1.8",
+    "date-fns": "^1.30.1",
     "express-generator": "^4.16.0",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
